create competition api
